Implement graceful shutdown

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,5 +5,9 @@ services:
       target: final
     environment:
       - APP_PORT=${APP_PORT_CONTAINER}
+      - SERVER_READ_TIMEOUT=${SERVER_READ_TIMEOUT}
+      - SERVER_READ_HEADER_TIMEOUT=${SERVER_READ_HEADER_TIMEOUT}
+      - SERVER_WRITE_TIMEOUT=${SERVER_WRITE_TIMEOUT}
+      - SERVER_IDLE_TIMEOUT=${SERVER_IDLE_TIMEOUT}
     ports:
       - "${APP_PORT_HOST}:${APP_PORT_CONTAINER}"
